Fixed spacing and added check for when terms are empty

--- a/css/styles.css
+++ b/css/styles.css
@@ -1744,10 +1744,9 @@ label {
 .question--wrapper {
   border-bottom: 1px solid #e6e6e6;
   margin-bottom: 1.5em;
-  padding-bottom: 1.5em;
 }
 
-/* line 18, ../sass/modules/_question.scss */
+/* line 17, ../sass/modules/_question.scss */
 .question--meta-data {
   margin-bottom: 1.5em;
   padding: .5em 1.25em .65em;
@@ -1761,19 +1760,19 @@ label {
   border-radius: 0.4em;
 }
 @media only screen and (min-width: 40em) {
-  /* line 18, ../sass/modules/_question.scss */
+  /* line 17, ../sass/modules/_question.scss */
   .question--meta-data {
     float: right;
   }
 }
 
-/* line 34, ../sass/modules/_question.scss */
+/* line 33, ../sass/modules/_question.scss */
 .question--inner {
   clear: both;
   margin-bottom: 1.5em;
 }
 
-/* line 40, ../sass/modules/_question.scss */
+/* line 39, ../sass/modules/_question.scss */
 .question--label {
   display: block;
   margin-bottom: .25em;
@@ -1781,15 +1780,20 @@ label {
   font-weight: bold;
 }
 
-/* line 48, ../sass/modules/_question.scss */
+/* line 47, ../sass/modules/_question.scss */
 .question {
   margin-bottom: 0;
   font-size: 125%;
 }
 
+/* line 53, ../sass/modules/_question.scss */
+.question--terms {
+  margin-bottom: 1.5em;
+}
+
 /* Questions list on user page
    ================================================================================================================== */
-/* line 61, ../sass/modules/_question.scss */
+/* line 64, ../sass/modules/_question.scss */
 .question--user-page-nodes-element {
   margin-bottom: 1em;
   border-bottom: 1px solid #e6e6e6;
